--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+body{
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  align-items:center;
 
-.App-link {
-  color: #61dafb;
 }
+.container{
+  top:50%;
+  left:50%;
+  position:absolute;
+  transform:translate(-50%,-50%) ;
+  margin:0 auto;
+  width:256px;
+  text-align: center;
+  border:10px solid #4169e1;
+  background:whitesmoke;
+  border-radius: 8px;
+}
+.keypad{
+  display:grid;
+  grid-template-columns:repeat(4,1fr);
+  grid-auto-rows:minmax(60px,auto);
+}
+input[type="text"]{
+  height:75px;
+  width:250px;
+  background-color:  #4169e1;
+  border:0px;
+  color:whitesmoke;
+  text-align: right;
+  font-size: 25px;
+  font-weight: 500;
+  letter-spacing: 1px;}
+  #clear{ grid-column: 1/3;
+    grid-row:1;
+    color:whitesmoke;
+  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  #result{
+    grid-column:3/5;
+    grid-row:5;
+    color:whitesmoke;
   }
-  to {
-    transform: rotate(360deg);
+  #backspace{
+    color:whitesmoke;
+
   }
-}
+  button{
+    margin:5px;
+    border:none;
+    border-radius: 10px;
+    cursor:pointer;
+    background:#4169e1;
+    color:whitesmoke;
+    font-weight: 500;
+
+  }
+  input:focus,
+  input:active,
+  button:focus,
+  button:active{
+    outline:none;
+  }
+  .highlight{
+    background:#4169e1;
+    
+  }
+
+
+
+
+
